[gd_scene load_steps=16 format=4 uid="uid://ci6fa5e7cpnqq"]

[ext_resource type="Script" uid="uid://4bmak8v523dd" path="res://Scenes/Menus/main_menu.gd" id="1_87uu1"]
[ext_resource type="Theme" uid="uid://cmfndxokwpbft" path="res://Assets/Themes/TitleTheme.tres" id="2_lg251"]
[ext_resource type="PackedScene" uid="uid://ckyky5q6ujbml" path="res://Components/Effects/CommonLayers.tscn" id="2_mdbg0"]
[ext_resource type="Script" uid="uid://dqk7ntehf58k6" path="res://addons/uiJuicer/Fader.gd" id="2_pbd8g"]
[ext_resource type="Shader" uid="uid://ddgwo6qauo3x0" path="res://Assets/Shaders/DistortionShader.tres" id="3_7r21k"]
[ext_resource type="Script" uid="uid://dfkio5csrgf1e" path="res://addons/uiJuicer/fadeLabel.gd" id="3_kqyq3"]
[ext_resource type="Theme" uid="uid://c8wwbt4is82pd" path="res://Assets/Themes/DefaultButton_Light.tres" id="4_64l0l"]
[ext_resource type="Texture2D" uid="uid://fge70i1xk7j3" path="res://Assets/2D/Textures/CeuNoite.png" id="4_c638u"]
[ext_resource type="Script" uid="uid://q80f422ouris" path="res://addons/uiJuicer/fadeButton.gd" id="5_o3kib"]
[ext_resource type="TileSet" uid="uid://qsxsnet0sy7c" path="res://Assets/2D/Tilesets/TowerTileSet.tres" id="6_h6abm"]
[ext_resource type="Theme" uid="uid://buiuaglnsgymo" path="res://Assets/Themes/DefaultLabel_Light.tres" id="6_or3ij"]
[ext_resource type="Theme" uid="uid://dqb5bisyaahmt" path="res://Assets/Themes/DefaultOption_Light.tres" id="7_h78sn"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7seun"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cs0gx"]
noise = SubResource("FastNoiseLite_7seun")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4gati"]
shader = ExtResource("3_7r21k")
shader_parameter/Distortion = SubResource("NoiseTexture2D_cs0gx")
shader_parameter/DistortionStrenght = 0.03

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_87uu1")

[node name="CommonLayers" parent="." instance=ExtResource("2_mdbg0")]
position = Vector2(-675, -64)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_4gati")
position = Vector2(456, 866)
scale = Vector2(2, 2)
texture = ExtResource("4_c638u")

[node name="Map" type="Node2D" parent="."]
position = Vector2(-581, 78)

[node name="BaseGround" type="TileMapLayer" parent="Map"]
scale = Vector2(0.509123, 0.5)
tile_map_data = PackedByteArray("AAAKAA0AAAACAAEAAAALAA0AAAACAAEAAAAMAA0AAAACAAEAAAANAA0AAAACAAEAAAAOAA0AAAACAAEAAAAPAA0AAAACAAEAAAAQAA0AAAACAAEAAAARAA0AAAACAAEAAAASAA0AAAACAAEAAAATAA0AAAACAAEAAAAUAA0AAAACAAEAAAAVAA0AAAACAAEAAAAWAA0AAAACAAEAAAAXAA0AAAACAAEAAAAYAA0AAAACAAEAAAAJAA4AAAACAAIAAAAKAA4AAAACAAIAAAALAA4AAAACAAIAAAAMAA4AAAACAAIAAAANAA4AAAACAAIAAAAOAA4AAAACAAIAAAAPAA4AAAACAAIAAAAQAA4AAAACAAIAAAARAA4AAAACAAIAAAASAA4AAAACAAIAAAATAA4AAAACAAIAAAAUAA4AAAACAAIAAAAVAA4AAAACAAIAAAAWAA4AAAACAAIAAAAXAA4AAAACAAIAAAAZAA0AAAACAAEAAAAaAA0AAAACAAEAAAAaAA4AAAACAAIAAAAZAA4AAAACAAIAAAAYAA4AAAACAAIAAAAIAA8AAAACAAIAAAAJAA8AAAACAAIAAAAKAA8AAAACAAIAAAALAA8AAAACAAIAAAAMAA8AAAACAAIAAAANAA8AAAACAAIAAAAOAA8AAAACAAIAAAAPAA8AAAACAAIAAAAQAA8AAAACAAIAAAARAA8AAAACAAIAAAASAA8AAAACAAIAAAATAA8AAAACAAIAAAAUAA8AAAACAAIAAAAVAA8AAAACAAIAAAAWAA8AAAACAAIAAAAXAA8AAAACAAIAAAAYAA8AAAACAAIAAAAZAA8AAAACAAIAAAAaAA8AAAACAAIAAAAaABAAAAACAAIAAAAZABAAAAACAAIAAAAYABAAAAACAAIAAAAXABAAAAACAAIAAAAWABAAAAACAAIAAAAVABAAAAACAAIAAAAUABAAAAACAAIAAAATABAAAAACAAIAAAASABAAAAACAAIAAAARABAAAAACAAIAAAAQABAAAAACAAIAAAAPABAAAAACAAIAAAAOABAAAAACAAIAAAANABAAAAACAAIAAAAMABAAAAACAAIAAAALABAAAAACAAIAAAAKABAAAAACAAIAAAAJABAAAAACAAIAAAAIABAAAAACAAIAAAAHABAAAAACAAIAAAAbAA0AAAACAAEAAAAbAA4AAAACAAIAAAAbAA8AAAACAAIAAAAbABAAAAACAAIAAAAcABAAAAACAAIAAAAdABAAAAACAAIAAAAeABAAAAACAAIAAAAfABAAAAACAAIAAAAgABAAAAACAAIAAAAhABAAAAACAAIAAAAhAA8AAAACAAIAAAAhAA4AAAACAAIAAAAhAA0AAAACAAIAAAAgAA0AAAAGAAIAAAAfAA0AAAACAAEAAAAeAA0AAAACAAEAAAAdAA0AAAACAAEAAAAcAA0AAAACAAEAAAAcAA4AAAACAAIAAAAcAA8AAAACAAIAAAAdAA8AAAACAAIAAAAeAA4AAAACAAIAAAAfAA4AAAACAAIAAAAgAA4AAAACAAIAAAAgAA8AAAACAAIAAAAfAA8AAAACAAIAAAAeAA8AAAACAAIAAAAdAA4AAAACAAIAAAAiAA0AAAADAAIAAAAiAA4AAAADAAIAAAAiAA8AAAADAAIAAAAiABAAAAADAAIAAAAhAAwAAAACAAIAAAAhAAsAAAACAAIAAAAhAAoAAAACAAEAAAAiAAoAAAADAAEAAAAiAAsAAAADAAIAAAAiAAwAAAADAAIAAAAGABEAAAACAAIAAAAHABEAAAACAAIAAAAIABEAAAACAAIAAAAJABEAAAACAAIAAAAKABEAAAACAAIAAAALABEAAAACAAIAAAAMABEAAAACAAIAAAANABEAAAACAAIAAAAOABEAAAACAAIAAAAPABEAAAACAAIAAAAQABEAAAACAAIAAAARABEAAAACAAIAAAASABEAAAACAAIAAAATABEAAAACAAIAAAAUABEAAAACAAIAAAAVABEAAAACAAIAAAAWABEAAAACAAIAAAAXABEAAAACAAIAAAAYABEAAAACAAIAAAAZABEAAAACAAIAAAAaABEAAAACAAIAAAAbABEAAAACAAIAAAAcABEAAAACAAIAAAAdABEAAAACAAIAAAAeABEAAAACAAIAAAAfABEAAAACAAIAAAAgABEAAAACAAIAAAAhABEAAAACAAIAAAAiABEAAAADAAIAAAAiABIAAAADAAIAAAAiABMAAAADAAIAAAAiABQAAAADAAMAAAAhABQAAAACAAMAAAAgABQAAAACAAMAAAAfABQAAAACAAMAAAAeABQAAAACAAMAAAAdABQAAAACAAMAAAAcABQAAAACAAMAAAAbABQAAAACAAMAAAAaABQAAAACAAMAAAAZABQAAAACAAMAAAAYABQAAAACAAMAAAAXABQAAAACAAMAAAAWABQAAAACAAMAAAAVABQAAAACAAMAAAAUABQAAAACAAMAAAATABQAAAACAAMAAAASABQAAAACAAMAAAARABQAAAACAAMAAAAQABQAAAACAAMAAAAPABQAAAACAAMAAAAOABQAAAACAAMAAAANABQAAAACAAMAAAAMABQAAAACAAMAAAALABQAAAACAAMAAAAKABQAAAACAAMAAAAJABQAAAACAAMAAAAIABQAAAACAAMAAAAHABQAAAACAAMAAAAGABQAAAACAAMAAAAFABQAAAABAAMAAAAFABIAAAABAAIAAAAGABIAAAACAAIAAAAHABIAAAACAAIAAAAIABIAAAACAAIAAAAJABIAAAACAAIAAAAKABIAAAACAAIAAAALABIAAAACAAIAAAAMABIAAAACAAIAAAANABIAAAACAAIAAAAOABIAAAACAAIAAAAPABIAAAACAAIAAAAQABIAAAACAAIAAAARABIAAAACAAIAAAASABIAAAACAAIAAAATABIAAAACAAIAAAAUABIAAAACAAIAAAAVABIAAAACAAIAAAAWABIAAAACAAIAAAAXABIAAAACAAIAAAAYABIAAAACAAIAAAAZABIAAAACAAIAAAAaABIAAAACAAIAAAAbABIAAAACAAIAAAAcABIAAAACAAIAAAAdABIAAAACAAIAAAAeABIAAAACAAIAAAAfABIAAAACAAIAAAAgABIAAAACAAIAAAAhABIAAAACAAIAAAAhABMAAAACAAIAAAAgABMAAAACAAIAAAAfABMAAAACAAIAAAAeABMAAAACAAIAAAAdABMAAAACAAIAAAAcABMAAAACAAIAAAAbABMAAAACAAIAAAAaABMAAAACAAIAAAAZABMAAAACAAIAAAAYABMAAAACAAIAAAAXABMAAAACAAIAAAAVABMAAAACAAIAAAAWABMAAAACAAIAAAAUABMAAAACAAIAAAATABMAAAACAAIAAAASABMAAAACAAIAAAARABMAAAACAAIAAAAQABMAAAACAAIAAAAPABMAAAACAAIAAAAOABMAAAACAAIAAAANABMAAAACAAIAAAAMABMAAAACAAIAAAALABMAAAACAAIAAAAKABMAAAACAAIAAAAJABMAAAACAAIAAAAIABMAAAACAAIAAAAHABMAAAACAAIAAAAGABMAAAACAAIAAAAFABMAAAABAAIAAAAFABEAAAABAAIAAAAGABAAAAACAAIAAAAHAA8AAAACAAIAAAAIAA4AAAACAAIAAAAJAA0AAAACAAEAAAAFAA4AAAABAAIAAAAGAA4AAAACAAIAAAAHAA4AAAACAAIAAAAGAA8AAAACAAIAAAAFAA8AAAABAAIAAAAFABAAAAABAAIAAAAIAA0AAAAHAAIAAAAHAA0AAAACAAIAAAAGAA0AAAACAAIAAAAFAA0AAAABAAIAAAAGAAwAAAACAAIAAAAGAAsAAAACAAIAAAAGAAoAAAACAAEAAAAFAAoAAAABAAEAAAAFAAwAAAABAAIAAAAFAAsAAAABAAIAAAAIAAwAAAADAAIAAAAIAAsAAAADAAIAAAAIAAoAAAADAAEAAAAHAAoAAAACAAEAAAAHAAsAAAACAAIAAAAHAAwAAAACAAIAAAAgAAwAAAABAAIAAAAgAAsAAAABAAIAAAAgAAoAAAABAAEAAAA=")
tile_set = ExtResource("6_h6abm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="BlackScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BlackScreenFader" type="Node" parent="CanvasLayer/BlackScreen"]
script = ExtResource("2_pbd8g")
StartVisible = true
metadata/_custom_type_script = "uid://dqk7ntehf58k6"

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainFader" type="Node" parent="CanvasLayer/Main"]
script = ExtResource("2_pbd8g")
metadata/_custom_type_script = "uid://dqk7ntehf58k6"

[node name="Title" type="Label" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -217.0
offset_right = 304.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lg251")
text = "TR_TITLE"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_kqyq3")
AutoFadeIn = false

[node name="MenuContainer" type="VBoxContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -435.0
offset_top = -302.0
offset_right = -103.0
offset_bottom = -61.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 9

[node name="LoadGameButton" type="Button" parent="CanvasLayer/Main/MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../LanguageContainer/LanguageOpt")
focus_neighbor_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../../LanguageContainer/LanguageOpt")
theme = ExtResource("4_64l0l")
text = "TR_LOAD_GAME"
script = ExtResource("5_o3kib")
AutoFadeIn = false

[node name="NewGameButton" type="Button" parent="CanvasLayer/Main/MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGameButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../LoadGameButton")
theme = ExtResource("4_64l0l")
text = "TR_NEW_GAME"
script = ExtResource("5_o3kib")
AutoFadeIn = false

[node name="SettingsButton" type="Button" parent="CanvasLayer/Main/MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../AboutButton")
focus_next = NodePath("../AboutButton")
focus_previous = NodePath("../NewGameButton")
theme = ExtResource("4_64l0l")
text = "TR_OPTIONS"
script = ExtResource("5_o3kib")
AutoFadeIn = false

[node name="AboutButton" type="Button" parent="CanvasLayer/Main/MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../SettingsButton")
theme = ExtResource("4_64l0l")
text = "TR_ABOUT"
script = ExtResource("5_o3kib")
AutoFadeIn = false

[node name="ExitButton" type="Button" parent="CanvasLayer/Main/MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../AboutButton")
focus_neighbor_bottom = NodePath("../../LanguageContainer/LanguageOpt")
focus_next = NodePath("../../LanguageContainer/LanguageOpt")
focus_previous = NodePath("../AboutButton")
theme = ExtResource("4_64l0l")
text = "TR_EXIT"
script = ExtResource("5_o3kib")
AutoFadeIn = false

[node name="LanguageContainer" type="HBoxContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -472.0
offset_top = 18.0
offset_right = -23.0
offset_bottom = 58.0
grow_horizontal = 0

[node name="LanguageLabel" type="Label" parent="CanvasLayer/Main/LanguageContainer"]
layout_mode = 2
theme = ExtResource("6_or3ij")
text = "TR_LANGUAGE"
script = ExtResource("3_kqyq3")
AutoFadeIn = false

[node name="LanguageOpt" type="OptionButton" parent="CanvasLayer/Main/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../MenuContainer/ExitButton")
focus_neighbor_bottom = NodePath("../../MenuContainer/LoadGameButton")
focus_next = NodePath("../../MenuContainer/LoadGameButton")
focus_previous = NodePath("../../MenuContainer/ExitButton")
theme = ExtResource("7_h78sn")
selected = 0
item_count = 3
popup/item_0/text = "Portugês"
popup/item_0/id = 0
popup/item_1/text = "Español"
popup/item_1/id = 1
popup/item_2/text = "English"
popup/item_2/id = 2

[node name="LanguageOptFader" type="Node" parent="CanvasLayer/Main/LanguageContainer/LanguageOpt"]
script = ExtResource("2_pbd8g")
metadata/_custom_type_script = "uid://dqk7ntehf58k6"

[connection signal="pressed" from="CanvasLayer/Main/MenuContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/MenuContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/MenuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/MenuContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/MenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/Main/LanguageContainer/LanguageOpt" to="." method="_on_language_opt_item_selected"]
